--- a/config/envoy-config.yml
+++ b/config/envoy-config.yml
@@ -26,7 +26,7 @@ static_resources:
                   - name: envoy.grpc_json_transcoder
                     config:
                       proto_descriptor: "/data/user.pb"
-                      services: ["com.senthuran.User.UserService"]
+                      services: ["com.senthuran.User.UserService","com.senthuran.User.ProductService"]
                       print_options:
                         add_whitespace: true
                         always_print_primitive_fields: true
